tests/snapshots/lexer_snapshots__lexer_all@tokens-177.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/validator/p5_unknown_member_errors.of
---
Ok(
    [
        Token {
            token_type: Struct,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "S",
            ),
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: LeftBrace,
            position: 10,
            line: 1,
            column: 11,
        },
        Token {
            token_type: RightBrace,
            position: 11,
            line: 1,
            column: 12,
        },
        Token {
            token_type: Function,
            position: 20,
            line: 2,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "test",
            ),
            position: 25,
            line: 2,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 26,
            line: 2,
            column: 15,
        },
        Token {
            token_type: Identifier(
                "s",
            ),
            position: 27,
            line: 2,
            column: 16,
        },
        Token {
            token_type: Colon,
            position: 28,
            line: 2,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "S",
            ),
            position: 30,
            line: 2,
            column: 19,
        },
        Token {
            token_type: RightParen,
            position: 31,
            line: 2,
            column: 20,
        },
        Token {
            token_type: LeftBrace,
            position: 33,
            line: 2,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "s",
            ),
            position: 35,
            line: 2,
            column: 24,
        },
        Token {
            token_type: Dot,
            position: 36,
            line: 2,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 37,
            line: 2,
            column: 26,
        },
        Token {
            token_type: Semicolon,
            position: 38,
            line: 2,
            column: 27,
        },
        Token {
            token_type: RightBrace,
            position: 40,
            line: 2,
            column: 29,
        },
    ],
)
