tests/snapshots/lexer_snapshots__lexer_all@tokens-181.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/validator/p5_unknown_variable_errors.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "test",
            ),
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "oops",
            ),
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Semicolon,
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: RightBrace,
            position: 25,
            line: 1,
            column: 26,
        },
    ],
)
