tests/snapshots/lexer_snapshots__lexer_all@tokens-185.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/validator/p5_var_decl_with_annotation_and_init.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "test",
            ),
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: Var,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: Colon,
            position: 24,
            line: 1,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 28,
            line: 1,
            column: 29,
        },
        Token {
            token_type: Eq,
            position: 30,
            line: 1,
            column: 31,
        },
        Token {
            token_type: Int(
                "5",
            ),
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Semicolon,
            position: 33,
            line: 1,
            column: 34,
        },
        Token {
            token_type: RightBrace,
            position: 35,
            line: 1,
            column: 36,
        },
    ],
)
