tests/snapshots/lexer_snapshots__lexer_all@tokens-186.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/validator/p5_while_non_bool_cond_errors.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "test",
            ),
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: While,
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: LeftParen,
            position: 25,
            line: 1,
            column: 26,
        },
        Token {
            token_type: Int(
                "5",
            ),
            position: 26,
            line: 1,
            column: 27,
        },
        Token {
            token_type: RightParen,
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: LeftBrace,
            position: 29,
            line: 1,
            column: 30,
        },
        Token {
            token_type: RightBrace,
            position: 30,
            line: 1,
            column: 31,
        },
        Token {
            token_type: RightBrace,
            position: 32,
            line: 1,
            column: 33,
        },
    ],
)
