tests/snapshots/lexer_snapshots__lexer_all@tokens-2.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/language/02_arithmetic.of
---
Ok(
    [
        Token {
            token_type: Import,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: LeftBrace,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightBrace,
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: From,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: StringLit(
                "of:core",
            ),
            position: 31,
            line: 1,
            column: 32,
        },
        Token {
            token_type: Semicolon,
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Function,
            position: 42,
            line: 3,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "describe",
            ),
            position: 51,
            line: 3,
            column: 18,
        },
        Token {
            token_type: LeftParen,
            position: 52,
            line: 3,
            column: 19,
        },
        Token {
            token_type: Identifier(
                "a",
            ),
            position: 53,
            line: 3,
            column: 20,
        },
        Token {
            token_type: Colon,
            position: 54,
            line: 3,
            column: 21,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 58,
            line: 3,
            column: 25,
        },
        Token {
            token_type: Comma,
            position: 59,
            line: 3,
            column: 26,
        },
        Token {
            token_type: Identifier(
                "b",
            ),
            position: 61,
            line: 3,
            column: 28,
        },
        Token {
            token_type: Colon,
            position: 62,
            line: 3,
            column: 29,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 66,
            line: 3,
            column: 33,
        },
        Token {
            token_type: RightParen,
            position: 67,
            line: 3,
            column: 34,
        },
        Token {
            token_type: Colon,
            position: 68,
            line: 3,
            column: 35,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 72,
            line: 3,
            column: 39,
        },
        Token {
            token_type: LeftBrace,
            position: 74,
            line: 3,
            column: 41,
        },
        Token {
            token_type: Var,
            position: 80,
            line: 4,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "sum",
            ),
            position: 84,
            line: 4,
            column: 10,
        },
        Token {
            token_type: Eq,
            position: 86,
            line: 4,
            column: 12,
        },
        Token {
            token_type: Identifier(
                "a",
            ),
            position: 88,
            line: 4,
            column: 14,
        },
        Token {
            token_type: Plus,
            position: 90,
            line: 4,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "b",
            ),
            position: 92,
            line: 4,
            column: 18,
        },
        Token {
            token_type: Semicolon,
            position: 93,
            line: 4,
            column: 19,
        },
        Token {
            token_type: Var,
            position: 99,
            line: 5,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "diff",
            ),
            position: 104,
            line: 5,
            column: 11,
        },
        Token {
            token_type: Eq,
            position: 106,
            line: 5,
            column: 13,
        },
        Token {
            token_type: Identifier(
                "a",
            ),
            position: 108,
            line: 5,
            column: 15,
        },
        Token {
            token_type: Minus,
            position: 110,
            line: 5,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "b",
            ),
            position: 112,
            line: 5,
            column: 19,
        },
        Token {
            token_type: Semicolon,
            position: 113,
            line: 5,
            column: 20,
        },
        Token {
            token_type: Var,
            position: 119,
            line: 6,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "prod",
            ),
            position: 124,
            line: 6,
            column: 11,
        },
        Token {
            token_type: Eq,
            position: 126,
            line: 6,
            column: 13,
        },
        Token {
            token_type: Identifier(
                "a",
            ),
            position: 128,
            line: 6,
            column: 15,
        },
        Token {
            token_type: Star,
            position: 130,
            line: 6,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "b",
            ),
            position: 132,
            line: 6,
            column: 19,
        },
        Token {
            token_type: Semicolon,
            position: 133,
            line: 6,
            column: 20,
        },
        Token {
            token_type: Var,
            position: 139,
            line: 7,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "quot",
            ),
            position: 144,
            line: 7,
            column: 11,
        },
        Token {
            token_type: Eq,
            position: 146,
            line: 7,
            column: 13,
        },
        Token {
            token_type: If,
            position: 149,
            line: 7,
            column: 16,
        },
        Token {
            token_type: LeftParen,
            position: 151,
            line: 7,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "b",
            ),
            position: 152,
            line: 7,
            column: 19,
        },
        Token {
            token_type: EqEq,
            position: 155,
            line: 7,
            column: 22,
        },
        Token {
            token_type: Int(
                "0",
            ),
            position: 157,
            line: 7,
            column: 24,
        },
        Token {
            token_type: RightParen,
            position: 158,
            line: 7,
            column: 25,
        },
        Token {
            token_type: LeftBrace,
            position: 160,
            line: 7,
            column: 27,
        },
        Token {
            token_type: Int(
                "0",
            ),
            position: 162,
            line: 7,
            column: 29,
        },
        Token {
            token_type: RightBrace,
            position: 164,
            line: 7,
            column: 31,
        },
        Token {
            token_type: Else,
            position: 169,
            line: 7,
            column: 36,
        },
        Token {
            token_type: LeftBrace,
            position: 171,
            line: 7,
            column: 38,
        },
        Token {
            token_type: Identifier(
                "a",
            ),
            position: 173,
            line: 7,
            column: 40,
        },
        Token {
            token_type: Slash,
            position: 175,
            line: 7,
            column: 42,
        },
        Token {
            token_type: Identifier(
                "b",
            ),
            position: 177,
            line: 7,
            column: 44,
        },
        Token {
            token_type: RightBrace,
            position: 179,
            line: 7,
            column: 46,
        },
        Token {
            token_type: Semicolon,
            position: 180,
            line: 7,
            column: 47,
        },
        Token {
            token_type: StringLit(
                "sum=",
            ),
            position: 190,
            line: 9,
            column: 9,
        },
        Token {
            token_type: Plus,
            position: 192,
            line: 9,
            column: 11,
        },
        Token {
            token_type: LeftParen,
            position: 194,
            line: 9,
            column: 13,
        },
        Token {
            token_type: Identifier(
                "sum",
            ),
            position: 197,
            line: 9,
            column: 16,
        },
        Token {
            token_type: As,
            position: 200,
            line: 9,
            column: 19,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 204,
            line: 9,
            column: 23,
        },
        Token {
            token_type: RightParen,
            position: 205,
            line: 9,
            column: 24,
        },
        Token {
            token_type: Plus,
            position: 207,
            line: 9,
            column: 26,
        },
        Token {
            token_type: StringLit(
                " diff=",
            ),
            position: 218,
            line: 10,
            column: 11,
        },
        Token {
            token_type: Plus,
            position: 220,
            line: 10,
            column: 13,
        },
        Token {
            token_type: LeftParen,
            position: 222,
            line: 10,
            column: 15,
        },
        Token {
            token_type: Identifier(
                "diff",
            ),
            position: 226,
            line: 10,
            column: 19,
        },
        Token {
            token_type: As,
            position: 229,
            line: 10,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 233,
            line: 10,
            column: 26,
        },
        Token {
            token_type: RightParen,
            position: 234,
            line: 10,
            column: 27,
        },
        Token {
            token_type: Plus,
            position: 236,
            line: 10,
            column: 29,
        },
        Token {
            token_type: StringLit(
                " prod=",
            ),
            position: 247,
            line: 11,
            column: 11,
        },
        Token {
            token_type: Plus,
            position: 249,
            line: 11,
            column: 13,
        },
        Token {
            token_type: LeftParen,
            position: 251,
            line: 11,
            column: 15,
        },
        Token {
            token_type: Identifier(
                "prod",
            ),
            position: 255,
            line: 11,
            column: 19,
        },
        Token {
            token_type: As,
            position: 258,
            line: 11,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 262,
            line: 11,
            column: 26,
        },
        Token {
            token_type: RightParen,
            position: 263,
            line: 11,
            column: 27,
        },
        Token {
            token_type: Plus,
            position: 265,
            line: 11,
            column: 29,
        },
        Token {
            token_type: StringLit(
                " quot=",
            ),
            position: 276,
            line: 12,
            column: 11,
        },
        Token {
            token_type: Plus,
            position: 278,
            line: 12,
            column: 13,
        },
        Token {
            token_type: LeftParen,
            position: 280,
            line: 12,
            column: 15,
        },
        Token {
            token_type: Identifier(
                "quot",
            ),
            position: 284,
            line: 12,
            column: 19,
        },
        Token {
            token_type: As,
            position: 287,
            line: 12,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 291,
            line: 12,
            column: 26,
        },
        Token {
            token_type: RightParen,
            position: 292,
            line: 12,
            column: 27,
        },
        Token {
            token_type: RightBrace,
            position: 294,
            line: 13,
            column: 2,
        },
        Token {
            token_type: Function,
            position: 304,
            line: 15,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "main",
            ),
            position: 309,
            line: 15,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 310,
            line: 15,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 311,
            line: 15,
            column: 16,
        },
        Token {
            token_type: Colon,
            position: 312,
            line: 15,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 316,
            line: 15,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 318,
            line: 15,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 326,
            line: 16,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 327,
            line: 16,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "describe",
            ),
            position: 335,
            line: 16,
            column: 17,
        },
        Token {
            token_type: LeftParen,
            position: 336,
            line: 16,
            column: 18,
        },
        Token {
            token_type: Int(
                "10",
            ),
            position: 338,
            line: 16,
            column: 20,
        },
        Token {
            token_type: Comma,
            position: 339,
            line: 16,
            column: 21,
        },
        Token {
            token_type: Int(
                "3",
            ),
            position: 341,
            line: 16,
            column: 23,
        },
        Token {
            token_type: RightParen,
            position: 342,
            line: 16,
            column: 24,
        },
        Token {
            token_type: RightParen,
            position: 343,
            line: 16,
            column: 25,
        },
        Token {
            token_type: Semicolon,
            position: 344,
            line: 16,
            column: 26,
        },
        Token {
            token_type: Int(
                "0",
            ),
            position: 348,
            line: 17,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 350,
            line: 18,
            column: 2,
        },
    ],
)
